Perbaikan Tugas 2
