# routes/api.php
@@ -9,7 +9,7 @@ Route::prefix('v1')
 
         Route::get('/accounts', [AccountController::class, 'index']);
 
-        Route::get('/accounts/{accountNumber}', [AccountController::class, 'show']);
+        Route::get('/accounts/{id}', [AccountController::class, 'show']);
 
         Route::post('/accounts', [AccountController::class, 'store'])
             ->middleware('sso');
